--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,10 @@
 /* Box Model Hack */
-* {
+/*
+\* {
   box-sizing: border-box;
 }
 
-/* Clear fix hack */
+/* Clear fix hack 
 .clearfix:after {
      content: ".";
      display: block;
@@ -16,7 +17,7 @@
 .clear {
 	clear: both;
 }
-
+*/
 /******************************************
 /* BASE STYLES
 /*******************************************/
@@ -70,6 +71,30 @@ footer .glyphicon {
 
 #signup{
   background-color: #cd9397
+}
+.row{
+  border-color: red;
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+}
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 /******************************************
