--- a/views/login.ejs
+++ b/views/login.ejs
@@ -52,13 +52,12 @@
         <form action="/login" method="POST">
           <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
           <div class="form-floating">
-            <label for="floatingInput">Email address</label>
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
+            <label for="exampleInputEmail1" >Email address</label>
           </div>
-          <div class="form-floating">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
+          <div class="form-floating">    
             <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+            <label for="exampleInputPassword1" >Password</label>
           </div>
           <button type="submit" class="w-100 btn btn-lg btn-primary">Submit</button>
         </form>
