update spelling errors on main data display page

--- a/views/fysical.ejs
+++ b/views/fysical.ejs
@@ -41,7 +41,7 @@
   <div class="container">
     <div class="row">
       <div class="col wf">
-        <h1>Historial Weight Data</h1>
+        <h1>Historical Weight Data</h1>
         <table class="table">
           <thead>
             <tr>
